--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   </div>
 </nav>
     <h2>Institute of Accountancy Training</h2>
-    <p>Ministry of Finance, Accra</p>
+    <p>Ministry of Finance, Accra, Ghana.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
-
