fixing the menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Tutorials
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Menu
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li class="dropdown-header">Menu</li>
