--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <body>
     <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Menu
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li class="dropdown-header">Menu</li>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Academics</a></li>
-      <li class="divider"></li>
-      <li class="dropdown-header">Dropdown header 2</li>
-      <li><a href="#">About Us</a></li>
-    </ul>
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
     <!-- navigatgion bar picked from bootstrap
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
