--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AIT</title>
-    <link rel="stylesheet" href="JEPHTAH-DAVIDS.github.io/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <body>
-    <div class="dropdown">
-  <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Menu
+
+<!--
+creating the grid
+
+-->
+<div class="grid-container">
+  <div class="w3-jumbo w3-teal">
+    <i class="fa fa-home"> IAT</i>
+  </div>
+
+  <div class="d-flex flex-row-reverse">
+  <div class="p-2">
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+  Menu
   </button>
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">About US</a></li>
-    <li><a class="dropdown-item" href="#">Academic</a></li>
-    <li><a class="dropdown-item" href="#">Mandate</a></li>
-    <li><a class="dropdown-item" href="#">Contact</a></li>
+  <li><a class="dropdown-item" href="#">About US</a></li>
+  <li><a class="dropdown-item" href="#">Academic</a></li>
+  <li><a class="dropdown-item" href="#">Mandate</a></li>
+  <li><a class="dropdown-item" href="#">Contact</a></li>
   </ul>
+  </div>
+  </div>
+  </div>
 </div>
-
-<div class="w3-jumbo w3-teal">
-  <i class="fa fa-home"> IAT</i>
-</div>
+<img src="iat.jpg" alt="IAT campus">
     <!-- navigatgion bar picked from bootstrap
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
