--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Location Sharing</title>
+    <link rel="stylesheet" href="suggestions.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/easy-autocomplete.min.css">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/jquery.easy-autocomplete.min.js"></script>
+
 </head>
 <body>
-    <div>
+    <div class="hideme">
+
         <label for="location">Location:</label>
         <input type="text" id="location" placeholder="Enter a location" />
         <button onclick="geocodeLocation()">Find Location</button>
     </div>
     <div>
-        <button onclick="getUserLocation()">Get My Location</button>
+      <!--  <button onclick="getUserLocation()">Click to get your location</button> -->
+        <button type="button" class="btn btn-success" onclick="getUserLocation()">Click to get your location</button>
+    </div> <br>
+    <div id="map" style="height: 400px;"></div> <br>
+    <div class="thosetext">
+        <p id="distanceInfo">Estimated Distance from store: </p>
+        <p id="costInfo">Estimated Delivery Cost: </p>
     </div>
-    <div id="map" style="height: 400px;"></div>
-    <button onclick="sendLocationToWhatsApp()">Send Location to WhatsApp</button>
-    <div>
-        <p id="distanceInfo">Distance: </p>
-        <p id="costInfo">Cost: </p>
-    </div>
+    <button onclick="sendLocationToWhatsApp()" class="whatsappbutton">
+      <span class="image-icon" style="margin-right:3px;"></span><span>Submit Location on WhatsApp</span>
+    </button>
 
     <script>
         var map = L.map("map").setView([5.56921, -0.21528], 15); // Initial coordinates
@@ -64,8 +71,8 @@
             var distance = calculateDistance(initialCoordinates, [newLatitude, newLongitude]);
             var cost = calculateCost(distance);
 
-            document.getElementById("distanceInfo").innerText = "Distance: " + distance.toFixed(2) + " miles";
-            document.getElementById("costInfo").innerText = "Cost: $" + cost.toFixed(2);
+            document.getElementById("distanceInfo").innerText = "Estimated distance from store: " + distance.toFixed(2) + " miles";
+            document.getElementById("costInfo").innerText = "Estimated Delivery Cost: $" + cost.toFixed(2);
         });
 
         function geocodeLocation() {
@@ -91,8 +98,8 @@
                         var distance = calculateDistance(initialCoordinates, [newLatitude, newLongitude]);
                         var cost = calculateCost(distance);
 
-                        document.getElementById("distanceInfo").innerText = "Distance: " + distance.toFixed(2) + " miles";
-                        document.getElementById("costInfo").innerText = "Cost: $" + cost.toFixed(2);
+                        document.getElementById("distanceInfo").innerText = "Estimated Distance from store: " + distance.toFixed(2) + " miles";
+                        document.getElementById("costInfo").innerText = "Estimated Delivery Cost: $" + cost.toFixed(2);
                     } else {
                         alert("Location not found.");
                     }
@@ -118,8 +125,8 @@
                     var distance = calculateDistance(initialCoordinates, [newLatitude, newLongitude]);
                     var cost = calculateCost(distance);
 
-                    document.getElementById("distanceInfo").innerText = "Distance: " + distance.toFixed(2) + " miles";
-                    document.getElementById("costInfo").innerText = "Cost: $" + cost.toFixed(2);
+                    document.getElementById("distanceInfo").innerText = "Estimated Distance from store: " + distance.toFixed(2) + " miles";
+                    document.getElementById("costInfo").innerText = "Estimated Delivery Cost: $" + cost.toFixed(2);
                 }, function (error) {
                     console.error("Error getting location: " + error.message);
                     alert("Error getting your location. Please enable location services.");
@@ -180,5 +187,6 @@
             }
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
