--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             } else {
                 // Handle distances greater than or equal to 6 miles
                 // You can add your own logic here if needed
-                return 0;
+                return "We dont deliver accross cities";
             }
         }
     </script>
