--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     var cost = calculateCost(distance);
 
                     document.getElementById("distanceInfo").innerText = "Estimated Distance from store: " + distance.toFixed(2) + " miles";
-                    document.getElementById("costInfo").innerText = "Estimated Delivery Cost: $" + cost.toFixed(2);
+                    document.getElementById("costInfo").innerText = "Estimated Delivery Cost: $" + "cost.toFixed(2)";
                 }, function (error) {
                     console.error("Error getting location: " + error.message);
                     alert("Error getting your location. Please enable location services.");
@@ -183,7 +183,7 @@
             } else {
                 // Handle distances greater than or equal to 6 miles
                 // You can add your own logic here if needed
-                return 0;
+                return "We dont deliver accross cities";
             }
         }
     </script>
